# Hospital-Management-System

./: .gitignore  Ambulance.cpp  Ambulance.h  Ambulance.txt  Appointment.cpp  Appointment.h  Appointment.txt  Billing.cpp  Billing.h  Billing.txt  Doc_App.pro  Doc_App.qml  Doctor.cpp  Doctor.h  Doctor.txt  Login.cpp  Login.h  MedicalRecords.cpp  MedicalRecords.h  MedicalRecords.txt  Medicine.cpp  Medicine.h  Medicine.txt  Patient.cpp  Patient.h  Patient.txt  Person.cpp  Person.h  Person.txt  Pharmacy.cpp  Pharmacy.h  Prescription.cpp  Prescription.h  Prescription.txt  Prescriptions.txt  RBAC.cpp  RBAC.h  README.md  Room.cpp  Room.h  (+12 more)
frontend/HMS/: CMakeLists.txt  addmedicinedialog.cpp  addmedicinedialog.h  admindashboard.cpp  admindashboard.h  adminregisterdialog.cpp  adminregisterdialog.h  ambulancelistdialog.cpp  ambulancelistdialog.h  ambulanceregisterdialog.cpp  ambulanceregisterdialog.h  ambulanceupdatedialog.cpp  ambulanceupdatedialog.h  appointmentbookdialog.cpp  appointmentbookdialog.h  appointmentlistdialog.cpp  appointmentlistdialog.h  billingdialog.cpp  billingdialog.h  credentialsdialog.cpp  credentialsdialog.h  dischargedialog.cpp  dischargedialog.h  doctordashboard.cpp  doctordashboard.h  doctorlistdialog.cpp  doctorlistdialog.h  doctorregisterdialog.cpp  doctorregisterdialog.h  doctorupdatedialog.cpp  doctorupdatedialog.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.ui  medicalrecordadddialog.cpp  medicalrecordadddialog.h  medicalrecordsviewdialog.cpp  medicalrecordsviewdialog.h  (+27 more)
